ready to deploy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     <!--  ===================================== Dropdown menu ======================================== -->
 
 
-    <div class="nav-container">
-      <a [routerLink]="['/']">Home</a>
+    <div class="nav-container" *ngIf="!anon">
+      <a [routerLink]="['/beers']">Home</a>
     </div>
     <!-- AUTH -->
     <div [ngClass]="{'is-user': user, 'is-anon': anon}">
@@ -15,7 +15,7 @@
 
       <ng-container *ngIf="reset && !loading && anon">
         <div class="dropdown nav-container">
-          <a class="dropbtn">Not logged in? &#9660;</a>
+          <a class="dropbtn glow">Not logged in? &#9660;</a>
           <div class="dropdown-content auth-container">
             <div>
               <a (click)="toggleLogInForm()">Log In</a>
