--- a/src/app/components/beer-list/beer-list.component.html
+++ b/src/app/components/beer-list/beer-list.component.html
@@ -3,5 +3,5 @@
   </ng-container>
 
 <div *ngIf="beer">
-  <a [routerLink]="['/beers', beer._id]">{{beer.name}}</a>
+  <a (click)="emitBeer()">{{beer.name}}</a>
 </div>
