--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -6,7 +6,7 @@
   <div class="inner-box-left">
     <p><strong>{{comment.content}}</strong></p>
     <hr>
-    <p>by {{comment.owner.username}} / {{comment.date}}</p>
+    <p>by <b>{{comment.owner.username}}</b> / {{comment.date}}</p>
     <p></p>
   </div>
 
