--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,6 +38,7 @@
 
 .dropdown:hover .dropbtn {
   background-color: #490000;
+  animation:none;
 }
 
 /* Nav */
@@ -89,4 +90,26 @@
   .dropdown-content {
     width: 300px;
   }
+}
+
+/* Glow text */
+
+.glow {
+  -webkit-animation-duration: 1s;
+  -webkit-animation-name: glow;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-iteration-count: infinite;
+  animation-duration: 1s;
+  animation-name: glow;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+
+  line-height: 100%;
+  font-size: 150%;
+}
+
+
+@-webkit-keyframes glow {
+  from { text-shadow: 0 0 0px rgb(221, 195, 77); }
+  to { text-shadow: 0 0 10px rgb(221, 195, 77), 0 0 10px rgb(221, 195, 77), 0 0 10px rgb(221, 195, 77), 0 0 10px rgb(221, 195, 77); }
 }
