--- a/src/app/pages/admin-page/admin-page.component.css
+++ b/src/app/pages/admin-page/admin-page.component.css
@@ -24,6 +24,7 @@ h2 {
   top: 0;
 }
 .item {
+  position: relative;
   display: inline-block;
   width: 400px;
   padding: 15px;
@@ -37,8 +38,11 @@ h2 {
   width: 80%;
 }
 .inner-box-right {
-  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
   padding-top: 20px;
+  margin-right: 5px;
 }
 button {
   color:white;
@@ -47,6 +51,7 @@ button {
   background: #c90000;
   padding: 0 10px;
   font-size: 140%;
+  margin-bottom: 5px;
 }
 
 button:hover {
