--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -4,7 +4,7 @@
 
 <div class="container block" *ngIf="user">
   <div>
-    <img clas="avatar" src="https://hittheroad.rentals/themes/htr/assets/images/default-profile-image.png" alt="profile picture">
+    <img clas="avatar" src="./assets/data/images/profile-image.png" alt="profile picture">
     <h1>{{user.username}}</h1>
   </div>
 
