--- a/src/app/pages/beer-detail-page/beer-detail-page.component.css
+++ b/src/app/pages/beer-detail-page/beer-detail-page.component.css
@@ -10,29 +10,20 @@ hr {
   width: 80%;
 }
 .comment-section {
+  position: relative;
   height: 250px;
   overflow-y: scroll;
   overflow-x: hidden;
+  margin-bottom: 20px;
 }
 
 .field {
   width: 100%;
 }
-.block {
+.block, .comment-form {
   padding: 20px 0;
-  /* background: rgba(82, 0, 0, 0.8); */
-  background: rgba(43, 3, 3, 0.7);
-  border: 1px solid black;
+
   width: 100%;
-}
-.top-section {
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  margin-bottom: 20px;
-}
-.bottom-section {
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
 }
 .fav-btn-active {
   background-image: url('http://icons.iconarchive.com/icons/hopstarter/soft-scraps/256/Button-Favorite-icon.png') !important;
@@ -57,6 +48,8 @@ hr {
 
 .container {
   margin: 0 auto;
+  background: rgba(43, 3, 3, 0.7);
+  border: 1px solid black;
 }
 
 textarea {
@@ -64,6 +57,25 @@ textarea {
   font-size: 20px;
 }
 
+.comment-form-hidden {
+  display: none;
+}
+
+.comment-form {
+  background: #310303;
+  position: absolute;
+  top: 0;
+}
+.btn {
+  display:block;
+  padding: 10px;
+  width: 80%;
+  border: 2px solid white;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bolder;
+}
 @media (max-width: 500px) {
   textarea {
     font-size: 14px;
