--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ body {
 
 body {
   color: rgb(255, 255, 255);
-  background: url('https://files.slack.com/files-pri/T02CQ4EN4-FAP8TGBEX/texture-bg_copy.png');
+  background: url('./assets/data/images/texture-bg.png');
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 147%;
@@ -41,9 +41,6 @@ h3, h4, p {
   top: 0;
   position: sticky;
   background: #310303;
-}
-#site-main {
-  padding: 30px 0;
 }
 .container {
   margin: 0 20px;
@@ -68,6 +65,7 @@ button:focus {
 
 button, a {
   cursor: move;
+  user-select: none;
 }
 
 /* Form */
@@ -97,15 +95,24 @@ form .validation {
   color: red;
 }
 
-form button {
-  border: 1px solid rgb(39, 38, 38);
-  background: rgba(221, 195, 77, 0.856);
-  padding: 15px 0;
-  font-size: 16px;
-  width: 90%;
+form .validation-success {
+  color: rgb(0, 209, 0);
 }
 
-form button:hover {
+form button {
+  color: white;
+  border: 2px solid white;
+  padding: 15px 0;
+  width: 80%;
+  background: none;
+  display:block;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+form button:hover, .btn:hover {
   box-shadow: inset 0 0 10px;
 }
 
